adding more features

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -27,5 +27,23 @@
         }
       }
     }
+  },
+  "amzlocation": {
+    "geotrack": {
+      "service": "Location",
+      "providerPlugin": "awscloudformation"
+    }
+  },
+  "ssmparam": {
+    "geotrack": {
+      "service": "Ssm",
+      "providerPlugin": "awscloudformation"
+    }
+  },
+  "restapi": {
+    "geotrack": {
+      "service": "ApiGateway",
+      "providerPlugin": "awscloudformation"
+    }
   }
 }
