--- a/amplify.yml
+++ b/amplify.yml
@@ -1,27 +1,33 @@
 version: 1
 backend:
-  phases:
+  phases:    
     build:
-      commands:
+      commands:      
         - '# Execute Amplify CLI with the helper script'
         - amplifyPush --simple
     postBuild:
-      commands:
-        - yum install -y jq
+      commands:    
+        - yum install -y jq 
+        - export AWSREGION=$(aws configure get region)
         - export AWSACCOUNTID=$(aws sts get-caller-identity --query Account --output text)
         - export PROJECT_NAME=$(cat ./amplify/.config/project-config.json | jq -r '.projectName')
-        - export VUE_APP_MAP_NAME=$(aws location list-maps --query 'Entries[*].[MapName]' --output text | grep -i -m1 ${PROJECT_NAME})
-        - if [ -z "$VUE_APP_MAP_NAME" ]; then aws location create-map --map-name ${PROJECT_NAME}.map --configuration "Style=VectorEsriTopographic" --pricing-plan "RequestBasedUsage"; fi
-        - export VUE_APP_TRACKER_NAME=$(aws location list-trackers --query 'Entries[*].[TrackerName]' --output text | grep -i -m1 ${PROJECT_NAME})
-        - if [ -z "$VUE_APP_TRACKER_NAME" ]; then aws location create-tracker --tracker-name ${PROJECT_NAME}.tracker --pricing-plan "RequestBasedUsage"; fi
-        - echo "VUE_APP_MAP=${PROJECT_NAME}.map" >> .env
-        - echo "VUE_APP_TRACKER=${PROJECT_NAME}.tracker" >> .env
-        - export S3AMPLIFY=$(aws resourcegroupstaggingapi get-resources --tag-filters Key=user:Application,Values=${PROJECT_NAME} --resource-type-filters s3 --query 'ResourceTagMappingList[*].[ResourceARN]' --output text | grep -i deployment | cut -c14-)
-        - export AMPLIFYROLENAME=${S3AMPLIFY/deployment/authRole}
-        - export LOCATION_POLICY=$(aws iam list-policies --query "Policies[*].[PolicyName]" --scope Local --output text | grep -i ${PROJECT_NAME}-location)
-        - if [ -z "$LOCATION_POLICY" ]; then aws iam create-policy --policy-name ${PROJECT_NAME}-location --policy-document file://location-policy.json; fi
+        - export VUE_APP_MAP=$(aws ssm get-parameter --name /amplify/${PROJECT_NAME}/$AWS_BRANCH/map --query Parameter.Value --output text)
+        - echo VUE_APP_MAP=${VUE_APP_MAP} >> .env
+        - export VUE_APP_TRACKER=$(aws ssm get-parameter --name /amplify/${PROJECT_NAME}/$AWS_BRANCH/tracker --query Parameter.Value --output text)
+        - echo VUE_APP_TRACKER=${VUE_APP_TRACKER} >> .env
+        - export VUE_APP_PLACE=$(aws ssm get-parameter --name /amplify/${PROJECT_NAME}/$AWS_BRANCH/place --query Parameter.Value --output text)
+        - echo VUE_APP_PLACE=${VUE_APP_PLACE} >> .env
+        - export VUE_APP_GEOFENCE=$(aws ssm get-parameter --name /amplify/${PROJECT_NAME}/$AWS_BRANCH/geofence --query Parameter.Value --output text)
+        - echo VUE_APP_GEOFENCE=${VUE_APP_GEOFENCE} >> .env
+        - export VUE_APP_ROUTE=$(aws ssm get-parameter --name /amplify/${PROJECT_NAME}/$AWS_BRANCH/route --query Parameter.Value --output text)
+        - echo VUE_APP_ROUTE=${VUE_APP_ROUTE} >> .env
+        - export VUE_APP_APIURL=$(aws ssm get-parameter --name /amplify/${PROJECT_NAME}/$AWS_BRANCH/apiUrl --query Parameter.Value --output text)
+        - echo VUE_APP_APIURL=${VUE_APP_APIURL} >> .env
+        - export AMPLIFYROLENAME=$(cat ./amplify/#current-cloud-backend/amplify-meta.json | jq -r '.providers.awscloudformation.AuthRoleName')
+        - export LOCATION_POLICY=$(aws iam list-policies --query 'Policies[*].[PolicyName]' --scope Local --output text | grep -i ${PROJECT_NAME}-location)
+        - if [ -z $LOCATION_POLICY ]; then aws iam create-policy --policy-name ${PROJECT_NAME}-location --policy-document file://location-policy.json; fi
         - export LOCATION_ROLE_POLICY=$(aws iam list-attached-role-policies --role-name ${AMPLIFYROLENAME} --query 'AttachedPolicies[*].[PolicyName]' --output text | grep -i ${PROJECT_NAME}-location)
-        - if [ -z "$LOCATION_ROLE_POLICY" ]; then aws iam attach-role-policy --role-name ${AMPLIFYROLENAME} --policy-arn arn:aws:iam::${AWSACCOUNTID}:policy/${PROJECT_NAME}-location; fi              
+        - if [ -z $LOCATION_ROLE_POLICY ]; then aws iam attach-role-policy --role-name ${AMPLIFYROLENAME} --policy-arn arn:aws:iam::${AWSACCOUNTID}:policy/${PROJECT_NAME}-location; fi              
 frontend:
   phases:
     preBuild:
