--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aws-amplify": "^3.3.23",
     "aws-amplify-vue": "^2.1.5",
     "aws-sdk": "^2.903.0",
+    "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "maplibre-gl": ">=1.14.0",
     "quasar": "^1.0.0",
