--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@vue/cli-plugin-vuex": "^5.0.6",
     "@vue/cli-service": "^5.0.6",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.8.0",
+    "eslint": "8.22.0",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^6.0.1",
     "sass-loader": "^10.1",
