--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@vue/cli-plugin-router": "^5.0.6",
     "@vue/cli-plugin-vuex": "^5.0.6",
     "@vue/cli-service": "^5.0.6",
-    "babel-eslint": "^10.1.0",
+    "@babel/eslint-parser": "^7.5.4",
     "eslint": "8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "node-sass": "^6.0.1",
