Updated Quasar UI version.
Updated Quasar Ui.
Added Manual imports for non-working elements.
Rebuilt Login page layout

--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -1,5 +1,8 @@
 {
-  "projectName": "geotrack",
+  "providers": [
+    "awscloudformation"
+  ],
+  "projectName": "awstrackervuejs",
   "version": "3.1",
   "frontend": "javascript",
   "javascript": {
@@ -7,11 +10,8 @@
     "config": {
       "SourceDir": "src",
       "DistributionDir": "dist",
-      "BuildCommand": "npm run-script build",
-      "StartCommand": "npm run-script serve"
+      "BuildCommand": "npm.cmd run-script build",
+      "StartCommand": "npm.cmd run-script serve"
     }
-  },
-  "providers": [
-    "awscloudformation"
-  ]
+  }
 }
