--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@aws-sdk/eventstream-marshaller": "^3.120.0",
     "@quasar/extras": "^1.0.0",
     "@turf/turf": "^6.5.0",
-    "aws-amplify": "^4.3.26",
+    "aws-amplify": "^4.3.33",
     "aws-amplify-vue": "^2.1.5",
     "aws-sdk": "^2.903.0",
     "axios": "^0.24.0",
@@ -20,15 +21,16 @@
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuelidate": "^0.7.6",
+    "vuetify": "^2.6.9",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.5.4",
     "@vue/cli-plugin-babel": "^5.0.6",
     "@vue/cli-plugin-eslint": "^5.0.6",
     "@vue/cli-plugin-router": "^5.0.6",
     "@vue/cli-plugin-vuex": "^5.0.6",
     "@vue/cli-service": "^5.0.6",
-    "@babel/eslint-parser": "^7.5.4",
     "eslint": "8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "node-sass": "^6.0.1",
